Added Spline 3D viewer

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Siddhant Patil</title>
+		<style>
+			p {
+				text-align: center;
+			}
+		</style>
 	</head>
 	<body>
-		Website in the works... 🚧
+		<p>Website in the works... 🚧</p>
+		<script
+			type="module"
+			src="https://unpkg.com/@splinetool/viewer@0.9.377/build/spline-viewer.js"
+		></script>
+		<spline-viewer
+			url="https://prod.spline.design/YQXKLbmvsd46PelZ/scene.splinecode"
+		></spline-viewer>
 	</body>
 </html>
